<resources>
    <string name="preference_key" translatable="false">file</string>
    <string name="check_login" translatable="false">check</string>
    <string name="id_user" translatable="false">file</string>
    <string name="user" translatable="false">file</string>
    <string name="pass" translatable="false">file</string>

    <string name="app_name" translatable="false">InteligenteCidade</string>
    <string name="empty_not_saved">Não foi guardado</string>
    <string name="saved">Guardado com sucesso!</string>
    <string name="title_activity_map" translatable="false">Map</string>
    <string name="title_activity_report" translatable="false">ReportActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>

    <string-array name="tipo">
        <item>Acidente</item>
        <item>Obras</item>
        <item>Saneamento</item>
        <item>Outro</item>
    </string-array>

    <string name="nome_app">Cidade Inteligente</string>
    <string name="username" translatable="false">Username:</string>
    <string name="password" translatable="false">Password:</string>
    <string name="login" translatable="false">Login</string>
    <string name="sugestaoRegisto">Para registar clique aqui.</string>
    <string name="notas">Notas</string>
    <string name="ficar_logado">Ficar Logado</string>

    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="guardar">Guardar</string>

    <string name="tipo">Tipo</string>
    <string name="morada">Morada</string>
    <string name="atualizar">Atualizar</string>

    <string name="latitude" translatable="false">Latitude:</string>
    <string name="longitude" translatable="false">Longitude:</string>

    <string name="reportar">Reportar</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="listobras">Listar Obras</string>
    <string name="listacidente">Listar Acidente</string>
    <string name="listsaneamento">Listar Saneamento</string>
    <string name="listooutros">Listar Outros</string>
    <string name="listall">Listar Todos</string>
    <string name="loginefetuado">Login Efetuado</string>
    <string name="loginerro">Erro</string>
    <string name="reportsuccess">Report Efetuado com sucesso.</string>
    <string name="emptycampos">Não é possível ter campos vazios.</string>
    <string name="updateReport">O report foi atualizado com sucesso.</string>
    <string name="deleteReport">O report foi eliminado com sucesso.</string>
    <string name="sensorluz">Sensor Luz</string>
    <string name="sensoraccell">Sensor Accelometro</string>

</resources>